--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^13.3.11",
     "@angular/router": "^13.3.11",
     "@capacitor/app": "1.1.1",
-    "@capacitor/core": "3.4.3",
+    "@capacitor/core": "^3.4.3",
     "@capacitor/haptics": "1.1.4",
     "@capacitor/keyboard": "1.2.2",
     "@capacitor/status-bar": "1.0.8",
@@ -30,6 +30,7 @@
     "@ionic-native/status-bar": "^5.36.0",
     "@ionic/angular": "^6.1.10",
     "@ngrx/component-store": "^13.2.0",
+    "cordova": "^11.1.0",
     "firebase": "^9.8.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.4.0",
@@ -46,7 +47,7 @@
     "@angular/compiler": "^13.3.11",
     "@angular/compiler-cli": "^13.3.11",
     "@angular/language-service": "^13.3.11",
-    "@capacitor/cli": "3.4.3",
+    "@capacitor/cli": "^3.4.3",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/cordova-plugin-camera": "^2.4.0",
     "@types/jasmine": "~3.6.0",
@@ -54,7 +55,6 @@
     "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
-    "cordova-android": "^10.1.2",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^5.0.0",
@@ -85,8 +85,6 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
